[tool.poetry]
name = "transit-at-hand-backend"
version = "0.0.1"
description = ""
authors = ["Dmitry Semenov <lonelyteapot@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Other/Nonlisted Topic",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
prisma = "^0.8.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.0.5"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
select = ["E", "W", "F", "S", "C4", "PT", "SIM"]
line-length = 88

[tool.ruff.per-file-ignores]
"./tests/**" = ["S101"] # Allow asserts in tests

[tool.isort]
# Migrate this to Ruff when it supports this multi-line behaviour
profile = "black"
multi_line_output = "VERTICAL_PREFIX_FROM_MODULE_IMPORT"
lines_after_imports = 2
extra_standard_library = ["typing_extensions"]
